--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main class="container" role="main">
       <header class="site-header" role="banner">
-        <h1>Important Update for PatronReact</h1>
+        <h1>PatronReact Landing</h1>
       </header>
 
       <section class="content" aria-label="Main content">
@@ -19,6 +19,12 @@
           <p>
             Our website domain may change from time to time. To ensure you can always
             find us, please <strong>bookmark this page</strong>.
+          </p>
+        </div>
+
+        <div id="downtime-message" class="downtime-box" style="display: none;" role="alert">
+          <p>
+            <strong>Hang tight!</strong> The admin is working on it, try again in a few minutes/hours. Join our discord for updates.
           </p>
         </div>
 
@@ -34,6 +40,7 @@
 
       <div class="site-footer" role="contentinfo">
         <a href="#" id="cancelBtn" class="cancelButton" aria-label="Visit main website">Visit Main Website <span style="display: none;" id="countdown">10</span></a>
+        <a href="#" id="discordBtn" class="discordButton" aria-label="Join Discord">Join Discord</a>
       </div>
     </main>
 
